Bug 981651 - Remove unused presShell variable to fix Werror bustage. r=kats CLOSED TREE